--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "classnames": "^2.2.6",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
@@ -10,6 +11,7 @@
     "react": "^16.10.2",
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.10.2",
+    "react-json-view": "^1.19.1",
     "react-modal": "^3.11.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
