--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "eslint-plugin-react-hooks": "^4.1.0",
     "webpack-cli": "^3.3.9"
   }
 }
