--- a/package.json
+++ b/package.json
@@ -3,19 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.2.2",
     "@material-ui/core": "^4.11.0",
+    "antd": "^4.6.5",
     "classnames": "^2.2.6",
+    "customize-cra": "^1.0.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.10.2",
+    "react-floating-button-menu": "^2.0.8",
     "react-json-view": "^1.19.1",
     "react-modal": "^3.11.1",
+    "react-onclickoutside": "^6.9.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
-    "react-table": "^7.5.0"
+    "react-table": "^7.5.0",
+    "react-sortable-hoc": "^1.11.0",
+    "array-move": "^3.0.1",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -33,6 +41,9 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "eslint": "^6.6.0",
+    "lint": "^0.7.0",
+    "eslint-plugin-jest": "^23.20.0",
     "eslint-plugin-react-hooks": "^4.1.0",
     "webpack-cli": "^3.3.9"
   }
