--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@ant-design/icons": "^4.2.2",
     "@material-ui/core": "^4.11.0",
     "antd": "^4.6.5",
+    "array-move": "^3.0.1",
     "classnames": "^2.2.6",
     "customize-cra": "^1.0.0",
     "lodash": "^4.17.15",
@@ -20,16 +21,20 @@
     "react-onclickoutside": "^6.9.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
-    "react-table": "^7.5.0",
     "react-sortable-hoc": "^1.11.0",
-    "array-move": "^3.0.1",
+    "react-table": "^7.5.0",
     "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
     "eject": "react-scripts eject"
+  },
+  "jest": {
+    "restoreMocks": true,
+    "clearMocks": true,
+    "resetMocks": true
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -41,10 +46,13 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@testing-library/react": "^11.1.2",
+    "@testing-library/user-event": "^12.2.2",
     "eslint": "^6.6.0",
-    "lint": "^0.7.0",
     "eslint-plugin-jest": "^23.20.0",
     "eslint-plugin-react-hooks": "^4.1.0",
+    "jest-environment-jsdom-sixteen": "^1.0.3",
+    "lint": "^0.7.0",
     "webpack-cli": "^3.3.9"
   }
 }
