--- a/package.json
+++ b/package.json
@@ -29,6 +29,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
+    "docker-build": "docker build --no-cache -t dzo-distributor-admin .",
+    "docker-run": "docker run -d --name dzo-distributor-admin -p 80:80 dzo-distributor-admin",
+    "docker-stop": "docker stop dzo-distributor-admin",
+    "docker-start": "docker start dzo-distributor-admin",
+    "docker-rm": "docker rm dzo-distributor-admin",
     "eject": "react-scripts eject"
   },
   "jest": {
