Pull request #155: add craco package and config for production publicPath
Squashed commit of the following:

commit d1fc825c878189eba26c8a0ab37183dd0536fa0b
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Wed Mar 3 11:26:00 2021 +0300

    add craco package and config for production publicPath

--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "styled-components": "^5.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test --env=jest-environment-jsdom-sixteen",
     "docker-build": "docker build --no-cache -t dzo-distributor-admin .",
     "docker-run": "docker run -d --name dzo-distributor-admin -p 80:80 dzo-distributor-admin",
     "docker-stop": "docker stop dzo-distributor-admin",
@@ -51,6 +51,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@craco/craco": "^5.9.0",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
     "eslint": "^6.6.0",
