--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "dzo-distributor",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=14.12.0",
+    "npm": ">=6.14.8"
+  },
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
     "@material-ui/core": "^4.11.0",
@@ -73,8 +77,6 @@
     "eslint": "^6.6.0",
     "eslint-plugin-jest": "^23.20.0",
     "eslint-plugin-react-hooks": "^4.1.0",
-    "jest-environment-jsdom-sixteen": "^1.0.3",
-    "lint": "^0.7.0",
-    "webpack-cli": "^3.3.9"
+    "lint": "^0.7.0"
   }
 }
