--- a/package.json
+++ b/package.json
@@ -8,14 +8,38 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
+    "@babel/plugin-transform-react-jsx": "^7.13.12",
+    "@babel/plugin-transform-react-jsx-self": "^7.12.13",
+    "@ckeditor/ckeditor5-autoformat": "^27.1.0",
+    "@ckeditor/ckeditor5-basic-styles": "^27.1.0",
+    "@ckeditor/ckeditor5-block-quote": "^27.1.0",
+    "@ckeditor/ckeditor5-build-classic": "^27.1.0",
+    "@ckeditor/ckeditor5-build-decoupled-document": "^27.1.0",
+    "@ckeditor/ckeditor5-clipboard": "^27.1.0",
+    "@ckeditor/ckeditor5-dev-utils": "^24.4.2",
+    "@ckeditor/ckeditor5-dev-webpack-plugin": "^24.4.2",
+    "@ckeditor/ckeditor5-editor-classic": "^27.1.0",
+    "@ckeditor/ckeditor5-editor-decoupled": "^27.1.0",
+    "@ckeditor/ckeditor5-essentials": "^27.1.0",
+    "@ckeditor/ckeditor5-heading": "^27.1.0",
+    "@ckeditor/ckeditor5-link": "^27.1.0",
+    "@ckeditor/ckeditor5-list": "^27.1.0",
+    "@ckeditor/ckeditor5-paragraph": "^27.1.0",
+    "@ckeditor/ckeditor5-react": "^3.0.2",
+    "@ckeditor/ckeditor5-theme-lark": "^27.1.0",
+    "@ckeditor/ckeditor5-typing": "^27.1.0",
+    "@ckeditor/ckeditor5-widget": "^27.1.0",
     "@material-ui/core": "^4.11.0",
     "antd": "^4.12.3",
     "array-move": "^3.0.1",
     "classnames": "^2.2.6",
     "customize-cra": "^1.0.0",
+    "interweave": "^12.7.2",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "postcss-loader": "^3.0.0",
     "prop-types": "^15.7.2",
+    "raw-loader": "^4.0.1",
     "react": "^16.10.2",
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.10.2",
@@ -27,6 +51,7 @@
     "react-scripts": "^3.2.0",
     "react-sortable-hoc": "^1.11.0",
     "react-table": "^7.5.0",
+    "style-loader": "^1.3.0",
     "styled-components": "^5.1.1"
   },
   "scripts": {
@@ -72,6 +97,7 @@
     "@testing-library/user-event": "^13.1.2",
     "@types/enzyme": "^3.10.8",
     "@types/jest": "^26.0.22",
+    "craco-raw-loader": "^1.0.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^6.6.0",
