--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       "dom.iterable",
       "esnext"
     ],
+    "newLine": "lf",
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
