--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,1 @@
-REACT_APP_BACKEND_URL=https://sbermomentum-ingress-proxy-ci02885562-etestenab-sbermomentum-d.apps.test.enablers.sbrf.ru/distributor
+REACT_APP_BACKEND_URL=http://localhost:8080/distributor
