Pull request #332: Fixes from release
Squashed commit of the following:

commit 4449bd5435cd3b44a69ec6e4bda51e593cc83c7a
Author: OUT-Avdeev-VS <VSAvdeev@sberbank.ru>
Date:   Wed Nov 17 15:33:07 2021 +0300

    add revisions to devops PR

commit 2181a04a612359d1f1cae8cc1813eed3e64742e2
Author: Ptushkin Dmitry <ptushkin.d.s@sberbank.ru>
Date:   Wed Nov 17 14:30:41 2021 +0300

    .env.production fixed

commit 1572632e8d8f75807f1d2ea03bb5452971cb43d8
Author: OUT-Avdeev-VS <VSAvdeev@sberbank.ru>
Date:   Wed Nov 17 11:50:29 2021 +0300

    Fix yarn.lock file

commit 61586eae5f711afb73893aeb651c75c5ee441a3b
Author: OUT-Avdeev-VS <VSAvdeev@sberbank.ru>
Date:   Tue Nov 16 12:20:19 2021 +0300

    add peerDependencies

commit 9404773c6a8b5fe782a0e1f08e50e5381fe94161
Author: Авдеев Виктор Сергеевич <VSAvdeev@sberbank.ru>
Date:   Mon Nov 15 18:18:02 2021 +0300

    Pull request #326: add devops files

    Squashed commit of the following:

    commit b18d1ce786768534c0119dcf07e3cceb0d835dc6
    Author: OUT-Avdeev-VS <VSAvdeev@sberbank.ru>
    Date:   Mon Nov 15 17:43:48 2021 +0300

        add devops files

--- a/package.json
+++ b/package.json
@@ -115,7 +115,11 @@
     "lint": "^0.7.0",
     "typescript": "4.3.3"
   },
+  "peerDependencies": {
+    "es-abstract": "1.18.0"
+  },
   "resolutions": {
+    "**/es-abstract": "1.18.0",
     "**/@typescript-eslint/eslint-plugin": "^4.23.0",
     "**/@typescript-eslint/parser": "^4.23.0"
   }
